# IN4110

./: README.md
assignment1/: friendly_greeting.txt  less_friendly_greeting.txt
assignment2/: analyze_pollution_data.py
assignment2/analytic_tools/: utilities.py
assignment2/in3110_assignment2.egg-info/: PKG-INFO
assignment2/tests/: test_utilities.py
assignment3/: README.md  pyproject.toml  setup.py  timing-report.txt
assignment3/in3110_instapy/: cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  python_filters.py
assignment3/in3110_instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: collect_dates.py  fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py  wiki_race_challenge.py
assignment4/olympic_games_results/: best_of_sport_by_Gold.md
assignment4/tables_of_anniversaries/: anniversaries_april.md  anniversaries_august.md  anniversaries_december.md  anniversaries_february.md  anniversaries_january.md  anniversaries_july.md  anniversaries_june.md  anniversaries_march.md  anniversaries_may.md  anniversaries_november.md  anniversaries_october.md  anniversaries_september.md
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/docs/: conf.py  index.rst  strompris.rst
assignment5/in3110_strompris.egg-info/: PKG-INFO
assignment5/templates/: activity.html  header.html  strompris.html
(+15 files in other folders)
