[build-system]
requires = [
    "setuptools>=61",
    "cython>=3",
]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
requires-python = ">=3.8"
license = {text = "MIT License"}
name = "in3110_instapy"
authors = [
    {name = "Kristian Hjortland Gravermoen", email = "krisgrav@uio.no"},
]
description = "Package for adding greyscale and sepia filters to images."
readme = "README.md"
dependencies = [
    "numpy>=1.18.0",
    "numba>=0.50.0",
    "Pillow>=8.0.0",
    "line-profiler>=3.0.2",
    "opencv-python",
    "pytest"
]

[project.scripts]
instapy = "in3110_instapy.cli:main"
